# Advanced-C-Programming

Midterm/Custom-Type/: Bouquet.cpp  Bouquet.h  CMakeLists.txt  main.cpp
Midterm/Debug/: CMakeLists.txt  Foo.cpp  Foo.h  Test.cpp  Test.h
Project/MS3/: CMakeLists.txt  CustomerOrder.cpp  CustomerOrder.h  LineManager.cpp  LineManager.h  Station.cpp  Station.h  Utilities.cpp  Utilities.h  Workstation.cpp  Workstation.h  main.cpp  ms3.cpp  reflect.txt
Project/MS3/tests/: Workstation-Unit-Test.cpp  catch.hpp  test_main.cpp
WS01/: CMakeLists.txt  event.cpp  event.h  main.cpp
WS02/: CMakeLists.txt  StringSet.cpp  StringSet.h  TimedEvents.cpp  TimedEvents.h  main.cpp  w2_p2.cpp
WS03/: CMakeLists.txt  Pair.cpp  Pair.h  PairSummable.cpp  PairSummable.h  Set.cpp  Set.h  SetSummable.cpp  SetSummable.h
WS04/: CMakeLists.txt  ConfirmationSender.cpp  ConfirmationSender.h  Reservation.cpp  Reservation.h  Restaurant.cpp  Restaurant.h  main.cpp  w4_p2.cpp
WS05/: Book.cpp  Book.h  CMakeLists.txt  Collection.h  Movie.cpp  Movie.h  SpellChecker.cpp  SpellChecker.h  Utils.h  leak_check_run.sh  main.cpp  reflect.txt  run.sh  w5_p2.cpp
WS06/: Autoshop.cpp  Autoshop.h  CMakeLists.txt  Car.cpp  Car.h  Racecar.cpp  Racecar.h  Utilities.cpp  Utilities.h  Vehicle.h  main.cpp  reflect.txt  w6_p2.cpp
WS07/: CMakeLists.txt  SongCollection.cpp  SongCollection.h  main.cpp  reflect.txt  w7_p1.cpp  w7_p2.cpp
WS08/: CMakeLists.txt  Element.h  List.h  Utilities.cpp  Utilities.h  main.cpp  reflect.txt
WS09/: CMakeLists.txt  SecureData.cpp  SecureData.h  main.cpp  reflect.txt  w9.cpp
(+15 files in other folders)
